<resources>
    <string name="app_name">Velo Stations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_folder">Il n y a pas des stations dans votre ville</string>
    <string name="name_text">Name : </string>
    <string name="adress_label">Address : </string>
    <string name="bike_stands_label">Bike Stands</string>
    <string name="available_bike_label">Available bikes</string>
    <string name="available_bike_stands_label">Available Stands Bikes : </string>
</resources>